--- a/Pages/blogAcademy.html
+++ b/Pages/blogAcademy.html
@@ -28,13 +28,13 @@
           <div class="collapse navbar-collapse"  id="navbarNav">
                 <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./aboutUs.html">Sobre nosotros</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Blog </a>
+                <a class="nav-link active" href="#">Blog </a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./teachers.html">Profesores</a>
