--- a/Pages/teachers.html
+++ b/Pages/teachers.html
@@ -29,7 +29,7 @@
           <div class="collapse navbar-collapse"  id="navbarNav">
                 <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                <a class="nav-link " aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./aboutUs.html">Sobre nosotros</a>
@@ -38,7 +38,7 @@
                 <a class="nav-link" href="./blogAcademy.html">Blog </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Profesores</a>
+                <a class="nav-link active" href="#">Profesores</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./contact.html">Contacto</a>
