haciendo formulario con bostrap

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -54,21 +54,21 @@
     <!--Formulario de inscripcion-->
 
     <form class="row g-3 needs-validation" novalidate>
-        <div class="col-md-4">
+        <div class="row-md-4">
           <label for="validationCustom01" class="form-label">Nombre Completo</label>
-          <input type="text" class="form-control" id="validationCustom01" value="text" required>
+          <input type="text" class="form-control" id="validationCustom01"  required>
           <div class="valid-feedback">
-            Looks good!
+            ¡Se ve bien!
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="row-md-4">
           <label for="validationCustom02" class="form-label">Apellido Completo</label>
-          <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
+          <input type="text" class="form-control" id="validationCustom02" required>
           <div class="valid-feedback">
-            Looks good!
+            ¡Se ve bien!
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="row-md-4">
           <label for="validationCustomUsername" class="form-label">Introduzca su dirección e-mail</label>
           <div class="input-group has-validation">
             <span class="input-group-text" id="inputGroupPrepend">@</span>
@@ -101,17 +101,17 @@
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
             <label class="form-check-label" for="invalidCheck">
-              Agree to terms and conditions
+                Aceptar términos y condiciones
             </label>
             <div class="invalid-feedback">
-              You must agree before submitting.
+                Debes aceptar antes de enviar.
             </div>
           </div>
         </div>
         <div class="col-12">
-          <button class="btn btn-primary" type="submit">Submit form</button>
+          <button class="btn btn-primary" type="submit">Enviar formulario</button>
         </div>
-      </form>
+    </form>
     
 
 
