terminando formulario con bostrap

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -17,7 +17,7 @@
 
     <title>Contacto</title>
 </head>
-<body>
+<body class="body-contact">
     
     <!-- Header y menu de navegacion-->
     <nav class="navbar navbar-dark  navbar-expand-lg ">
@@ -59,7 +59,7 @@
           <input type="text" class="form-control" id="validationCustom01"  required>
           <div class="valid-feedback">
             ¡Se ve bien!
-          </div>
+        </div>
         </div>
         <div class="row-md-4">
           <label for="validationCustom02" class="form-label">Apellido Completo</label>
@@ -111,7 +111,7 @@
         <div class="col-12">
           <button class="btn btn-primary" type="submit">Enviar formulario</button>
         </div>
-    </form>
+      </form>
     
 
 
