Formulario terminado, falta hacerlo responsive

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -50,7 +50,19 @@
     </nav>
     <br><br><br>
 
-    
+    <!-- Contenido de la pagina-->
+    <section class="section-formulario">
+      <div>
+        <h3>FORMATO DE INSCRIPCIÓN</h3>
+      </div>
+      <br>
+      <div>
+        <p>
+          Completa el siguiente formulario para iniciar tu aventura en ciberseguridad con nosotros. Proporciona información precisa para facilitar tu proceso de inscripción. <br>
+          Tu privacidad es esencial para nosotros; tus datos serán tratados con confidencialidad y no serán compartidos con terceros sin tu consentimiento.
+        </p>
+      </div>
+    </section>
     <!--Formulario de inscripcion-->
 
     <form class="row g-3 needs-validation" novalidate>
