--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <a class="nav-link" href="./Pages/teachers.html">Profesores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../Pages/contact.html">Contacto</a>
+            <a class="nav-link" href="./Pages/contact.html">Contacto</a>
           </li>
               
         </ul>
