Terminando forlmulario responsive

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -48,14 +48,13 @@
           </div>
         </div>
     </nav>
-    <br><br><br>
+    
 
     <!-- Contenido de la pagina-->
     <section class="section-formulario">
       <div>
         <h3>FORMATO DE INSCRIPCIÓN</h3>
       </div>
-      <br>
       <div>
         <p>
           Completa el siguiente formulario para iniciar tu aventura en ciberseguridad con nosotros. Proporciona información precisa para facilitar tu proceso de inscripción. <br>
@@ -66,7 +65,7 @@
     
     <!--Formulario de inscripcion-->
 
-    <form class="row g-3 needs-validation" novalidate>
+    <form class="row g-3 needs-validation" >
         <div class="row-md-4">
           <label for="validationCustom01" class="form-label">Nombre Completo</label>
           <input type="text" class="form-control" id="validationCustom01"  required>
