Empezando la pagina sobre nosotros

--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -51,7 +51,7 @@
     
 
     <!-- Contenido de la pagina-->
-    <section class="section-formulario">
+    <section class="section-contact">
       <div>
         <h3>FORMATO DE INSCRIPCIÓN</h3>
       </div>
@@ -116,7 +116,7 @@
                 Aceptar términos y condiciones
             </label>
             <div class="invalid-feedback">
-                Debes aceptar antes de enviar.
+              Debes aceptar antes de enviar.
             </div>
           </div>
         </div>
