--- a/Pages/blogAcademy.html
+++ b/Pages/blogAcademy.html
@@ -12,14 +12,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- Vinculamos nuestro css-->
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <!-- Scrip para agregar iconos de fontawesome-->
     <script src="https://kit.fontawesome.com/4fe2cf8e62.js" crossorigin="anonymous"></script>
 
     <title>Blog | Academia de Ciberseguridad</title>
 </head>
-<body>
+<body class="body-blog">
     
     <!-- Header y menu de navegacion-->
     <nav class="navbar navbar-dark  navbar-expand-lg ">
@@ -51,8 +51,18 @@
           </div>
         </div>
     </nav>
+   
+    <section class="section-blog">
 
 
+    </section>
+   <section class="section black"> 
+
+
+   </section>
+   <section class="section white">
+
+   </section>
     <!-- Footer de la pagina-->
     <footer class="footer">
         
