--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- Vinculamos nuestro css-->
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../css/styles.css">
 
     <!-- Scrip para agregar iconos de fontawesome-->
     <script src="https://kit.fontawesome.com/4fe2cf8e62.js" crossorigin="anonymous"></script>
@@ -130,7 +130,7 @@
       </form>
       
       <section class="imgContact">
-        <img src="../img/security-7.png" alt="fondoImg">
+        <img src="../img/Grupo-5877.png" alt="fondoImg">
       </section>
       
 
