--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
     <!-- Vincular el css con el html mediante la etiqueta link-->
-    <link rel="stylesheet" href="./Css/style.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
     <!-- Favicon -->
 
