--- a/Pages/teachers.html
+++ b/Pages/teachers.html
@@ -15,6 +15,9 @@
     <!-- Vinculamos nuestro css-->
     <link rel="stylesheet" href="../css/styles.css">
 
+    <!--Favicon-->
+    <link rel="icon" href="../img/Favicon_Academia_de_Ciberseguridad.jpeg" >
+
     <!-- Scrip para agregar iconos de fontawesome-->
     <script src="https://kit.fontawesome.com/4fe2cf8e62.js" crossorigin="anonymous"></script>
 
@@ -26,7 +29,7 @@
     <nav class="navbar navbar-dark  navbar-expand-lg ">
         <div class="container-fluid">
 
-          <img src="../img/Academia de Ciberseguridad.png" width="300" height="40" alt="logo">
+          <img src="../img/Logo_Academia_de _Ciberseguridad.png" width="300" height="40" alt="logo">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -53,8 +56,7 @@
         </div>
     </nav>
 
-
-
+    
     <!-- Footer de la pagina-->
     <footer class="footer">
         
