--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- Vincular el css con el html mediante la etiqueta link-->
     <link rel="stylesheet" href="./css/styles.css">
 
-    <!-- Favicon -->
+    <!--Favicon-->
+    <link rel="icon" href="../img/Favicon_Academia_de_Ciberseguridad.jpeg" >
 
     <!-- Scrip para agregar iconos de fontawesome-->
     <script src="https://kit.fontawesome.com/4fe2cf8e62.js" crossorigin="anonymous"></script>
@@ -31,7 +32,7 @@
   <nav class="navbar navbar-dark  navbar-expand-lg ">
     <div class="container-fluid">
       
-      <img src="./img/Academia de Ciberseguridad.png" width="300" height="40" alt="logo">
+      <img src="./img/Logo_Academia_de _Ciberseguridad.png" width="300" height="40" alt="logo">
       
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -71,7 +72,7 @@
           <h5> Bienvenido a la Academia de Ciberseguridad</h5>
           <p class="titulo-grande">FORJA TU CAMINO EN<br>
             CIBERSEGURIDAD HACIA <br>
-            LA EXELENCIA
+            LA EXCELENCIA
           </p>
 
           <div>
