--- a/Pages/blogAcademy.html
+++ b/Pages/blogAcademy.html
@@ -7,15 +7,22 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Open+Sans:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
-    
+
+    <!--Seo on-page-->
+    <meta name="description" content="Prepárate para el futuro de la seguridad digital con nuestra academia de ciberseguridad. Ofrecemos una formación completa para afrontar los desafíos de la ...">
+    <meta name="keywords" content="Blog de la academia, acedemia de ciberseguridad, Ciberseguridad, Curso de ciberseguridad, Curso de ciberseguridad,Cursos de ciberseguridad, Programas de ciberseguridad, Carreras de ciberseguridad">">
+
     <!-- Añadiendo bostrap, se agrega siempre arriba del css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- Añadiendo AOS para animaciones-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <!-- Vinculamos nuestro css-->
     <link rel="stylesheet" href="../css/styles.css">
 
     <!--Favicon-->
-    <link rel="icon" href="../img/Favicon_Academia_de_Ciberseguridad.jpeg" >
+    <link rel="icon" href="../img/favicon_logo.png" >
 
     <!-- Scrip para agregar iconos de fontawesome-->
     <script src="https://kit.fontawesome.com/4fe2cf8e62.js" crossorigin="anonymous"></script>
@@ -77,14 +84,15 @@
 
 
   <section class="section white">
-    <section class="tarjetas-section">
-      <div class="conteiner-blog">
 
+    <section class="tarjetas-section">
+
+      <div class="conteiner-blog">
 
         <!-- Card 1-->
           <div class="card">
             <figure>
-              <img src="../img/foto_blog_linux.png" alt="foto linux">
+              <img data-aos="fade-left" src="../img/foto_blog_linux.png" alt="foto linux">
             </figure>
             <div class="contenido">
               <h3>¿Qué es Linux?</h3>
@@ -99,7 +107,7 @@
           <!-- Card 2-->
           <div class="card">
               <figure>
-                <img src="../img/foto_blog_desarrolo_web.jpg" alt="foto linux">
+                <img data-aos="fade-left" src="../img/foto_blog_desarrolo_web.jpg" alt="foto desarrollo">
               </figure>
               <div class="contenido">
                 <h3 class="titulo-tarjeta2">¿Qué hace un Desarrolador Web ?</h3>
@@ -116,7 +124,7 @@
           
           <div class="card">
               <figure>
-                <img src="../img/foto_blog_inteligencia_articifial.jpg" alt="foto linux">
+                <img data-aos="fade-left" src="../img/foto_blog_inteligencia_articifial.jpg" alt="foto AI">
               </figure>
               <div class="contenido">
                 <h3>¿Qué es una AI?</h3>
@@ -165,7 +173,13 @@
         </div>
     </footer>
 
+    <!--Scrip de AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
+    <!--Scrip de bostrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
