--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!--Seo on-page-->
+    <meta name="description" content="Inscríbete en nuestra Academia de Ciberseguridad y empieza tu formación con expertos reconocidos. Cursos integrales, certificaciones y formación práctica ...">
+    <meta name="keywords" content=" Inscripcion academica, Inscripcion a la academia,Contacto, Conctacto de la academia, Acedemia de ciberseguridad, Ciberseguridad, Curso de ciberseguridad, Academia de ciberseguridad sobre nosotros, Curso de ciberseguridad,Cursos de ciberseguridad, Programas de ciberseguridad, Carreras de ciberseguridad">">
+
     <!--Agreagar el link para las nuevas tipografias-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,11 +16,14 @@
     <!-- Añadiendo bostrap, se agrega siempre arriba del css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+    <!-- Añadiendo AOS para animaciones-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    
     <!-- Vinculamos nuestro css-->
     <link rel="stylesheet" href="../css/styles.css">
 
     <!--Favicon-->
-    <link rel="icon" href="../img/Favicon_Academia_de_Ciberseguridad.jpeg" >
+    <link rel="icon" href="../img/favicon_logo.png" >
 
     <!-- Scrip para agregar iconos de fontawesome-->
     <script src="https://kit.fontawesome.com/4fe2cf8e62.js" crossorigin="anonymous"></script>
@@ -60,7 +67,7 @@
     <!-- Contenido de la pagina-->
     <section class="section-contact">
       <div>
-        <h3>FORMATO DE INSCRIPCIÓN</h3>
+        <h1>FORMATO DE INSCRIPCIÓN</h1>
       </div>
       <div>
         <p>
@@ -163,6 +170,13 @@
         </div>
     </footer>
 
+    <!--Scrip de AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+
+    <!--Scrip de bostrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
