--- a/Pages/teachers.html
+++ b/Pages/teachers.html
@@ -9,14 +9,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans&family=Open+Sans:wght@300&family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 
+    <!--Seo on-page-->
+    <meta name="description" content="Nuestro equipo docente está compuesto por profesionales altamente calificados y apasionados por la ciberseguridad. Cada uno de ellos se ...">
+    <meta name="keywords" content="Profesores, Profesionales,Profesores capacitados,Academia, Acedemia de ciberseguridad, Ciberseguridad, Curso de ciberseguridad,Cursos de ciberseguridad, Programas de ciberseguridad, Carreras de ciberseguridad">
+Z
     <!-- Añadiendo bostrap, se agrega siempre arriba del css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
+    <!-- Añadiendo AOS para animaciones-->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    
     <!-- Vinculamos nuestro css-->
     <link rel="stylesheet" href="../css/styles.css">
 
     <!--Favicon-->
-    <link rel="icon" href="../img/Favicon_Academia_de_Ciberseguridad.jpeg" >
+    <link rel="icon" href="../img/favicon_logo.png" >
 
     <!-- Scrip para agregar iconos de fontawesome-->
     <script src="https://kit.fontawesome.com/4fe2cf8e62.js" crossorigin="anonymous"></script>
@@ -83,6 +90,13 @@
         </div>
     </footer>
 
+    <!--Scrip de AOS-->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
+
+    <!--Scrip de bostrap-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
