--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!--Seo on-page-->
     <meta name="description" content="Inscríbete en nuestra Academia de Ciberseguridad y empieza tu formación con expertos reconocidos. Cursos integrales, certificaciones y formación práctica ...">
-    <meta name="keywords" content=" Inscripcion academica, Inscripcion a la academia,Contacto, Conctacto de la academia, Acedemia de ciberseguridad, Ciberseguridad, Curso de ciberseguridad, Academia de ciberseguridad sobre nosotros, Curso de ciberseguridad,Cursos de ciberseguridad, Programas de ciberseguridad, Carreras de ciberseguridad">">
+    <meta name="keywords" content=" Inscripcion academica, Inscripcion a la academia,Contacto, Conctacto de la academia, Acedemia de ciberseguridad, Ciberseguridad, Curso de ciberseguridad, Academia de ciberseguridad sobre nosotros, Curso de ciberseguridad,Cursos de ciberseguridad, Programas de ciberseguridad, Carreras de ciberseguridad">
 
     <!--Agreagar el link para las nuevas tipografias-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -36,7 +36,7 @@
     <nav class="navbar navbar-dark  navbar-expand-lg ">
         <div class="container-fluid">
 
-          <img src="../img/Logo_Academia_de _Ciberseguridad.png" width="300" height="40" alt="logo">
+          <img src="../img/logo_Academia_de _Ciberseguridad.png" width="300" height="40" alt="logo">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
