--- a/Pages/blogAcademy.html
+++ b/Pages/blogAcademy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +10,7 @@
 
     <!--Seo on-page-->
     <meta name="description" content="Prepárate para el futuro de la seguridad digital con nuestra academia de ciberseguridad. Ofrecemos una formación completa para afrontar los desafíos de la ...">
-    <meta name="keywords" content="Blog de la academia, acedemia de ciberseguridad, Ciberseguridad, Curso de ciberseguridad, Curso de ciberseguridad,Cursos de ciberseguridad, Programas de ciberseguridad, Carreras de ciberseguridad">">
+    <meta name="keywords" content="Blog de la academia, acedemia de ciberseguridad, Ciberseguridad, Curso de ciberseguridad, Curso de ciberseguridad,Cursos de ciberseguridad, Programas de ciberseguridad, Carreras de ciberseguridad">
 
     <!-- Añadiendo bostrap, se agrega siempre arriba del css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -29,13 +29,16 @@
 
     <title>Blog | Academia de Ciberseguridad</title>
 </head>
+
+Formación integral en ciberseguridad, impartida por expertos. Prepárate para proteger el mundo digital.
+
 <body class="body-blog">
     
     <!-- Header y menu de navegacion-->
     <nav class="navbar navbar-dark  navbar-expand-lg ">
         <div class="container-fluid">
           
-          <img src="../img/Logo_Academia_de _Ciberseguridad.png" width="300" height="40" alt="logo">
+          <img src="../img/logo_Academia_de _Ciberseguridad.png" width="300" height="40" alt="logo">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
