--- a/Pages/teachers.html
+++ b/Pages/teachers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <!--Seo on-page-->
     <meta name="description" content="Nuestro equipo docente está compuesto por profesionales altamente calificados y apasionados por la ciberseguridad. Cada uno de ellos se ...">
     <meta name="keywords" content="Profesores, Profesionales,Profesores capacitados,Academia, Acedemia de ciberseguridad, Ciberseguridad, Curso de ciberseguridad,Cursos de ciberseguridad, Programas de ciberseguridad, Carreras de ciberseguridad">
-Z
+
     <!-- Añadiendo bostrap, se agrega siempre arriba del css-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -36,7 +36,7 @@ Z
     <nav class="navbar navbar-dark  navbar-expand-lg ">
         <div class="container-fluid">
 
-          <img src="../img/Logo_Academia_de _Ciberseguridad.png" width="300" height="40" alt="logo">
+          <img src="../img/logo_Academia_de _Ciberseguridad.png" width="300" height="40" alt="logo">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
