terminado responsive vista 320 px a 375pc

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     
     <title>Academia De Ciberseguridad</title>
 </head>
-<body>
+<body class="body-index">
 
   <!-- Header y menu de navegacion-->
   <nav class="navbar navbar-dark  navbar-expand-lg ">
