--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Añadiendo AOS para animaciones-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     
-    <!-- Vincular el css con el html mediante la etiqueta link-->
+    <!-- Vincular el css con el html mediantee la etiqueta link-->
     <link rel="stylesheet" href="./css/styles.css">
 
     <!--Favicon-->
